<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3F2A5CF">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_chevron_left_24" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView7"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:scaleType="fitXY"
            android:src="@drawable/demo_profile"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="277dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:paddingLeft="10dp"
            android:text="@string/demo"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/secondary_logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/meet_prompt"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:backgroundTint="#C3D03A8C"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">

        <TextView
            android:id="@+id/anyone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anyone"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156">

        <TextView
            android:id="@+id/nonBinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_binary"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_find"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397">

        <TextView
            android:id="@+id/longTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_term"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604">

        <TextView
            android:id="@+id/ENM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_monogamy"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <TextView
            android:id="@+id/marriage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:backgroundTint="#C3D03A8C"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            android:id="@+id/casual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casual"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:backgroundTint="#60C3E2"
        android:text="@string/next"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>