<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C3F2A5CF">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/edu_q"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046">

        <TextView
            android:id="@+id/highSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_school"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354">

        <TextView
            android:id="@+id/gradSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grad_school"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146">

        <TextView
            android:id="@+id/college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_chevron_left_24" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="277dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/secondary_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249">

        <TextView
            android:id="@+id/ug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ug"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459">

        <TextView
            android:id="@+id/grad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grad"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/smoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/smoke_q"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764">

        <TextView
            android:id="@+id/occasionally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occasionally"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657">

        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="50dp"
        android:backgroundTint="#60C3E2"
        android:text="@string/next"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>